Figured out the H/M type abstraction value conversion. Revised the H model to use it. Next, need to update M and S.

--- a/model/haskell/grammar.tex
+++ b/model/haskell/grammar.tex
@@ -8,7 +8,7 @@
 
 \varvaluh & $=$ & \expfabss{\varvarh}{\vartyh}{\varexph} $|$ \exptabs{\tyvarh}{\varexph} $|$ \expnum{\varnum} $|$ \expnils{\vartyh} $|$ \expcons{\varexph}{\varexph} $|$ \exphm{\cslump}{\varcsm}{\varvalfm} \\
 
-&& \exphs{\tylump}{\varvalfs} \\
+&& \exphs{\cslump}{\varvalfs} \\
 
 \vartyh & $=$ & \tylump $|$ \tynum $|$ \tyvarh $|$ \tylist{\vartyh} $|$ \tyfun{\vartyh}{\vartyh} $|$ \tyfor{\tyvarh}{\vartyh} \\
 
