--- a/model/haskell/operational-semantics/haskell.tex
+++ b/model/haskell/operational-semantics/haskell.tex
@@ -12,7 +12,7 @@
 
 \redruleh
 {\exptapp{(\exptabs{\tyvarh}{\varexph})}{\vartyh}}
-{\tysubst{\varexph}{\csbrand{\vartyh}{\tyvarh}}{\tyvarh}} \\
+{\tysubst{\varexph}{\csbrand{\varbrand}{\vartyh}}{\tyvarh}} \\
 
 % Fix
 
