Revised the ML model to use the new tyabs interop for H/M, and cs in red rules.

--- a/macros.tex
+++ b/macros.tex
@@ -182,7 +182,7 @@
 \newcommand{\redruleh}[2]{\ensuremath{\redrule{\redconh{#1}}{\redcon{#2}}}}
 \newcommand{\redrulem}[2]{\ensuremath{\redrule{\redconm{#1}}{\redcon{#2}}}}
 \newcommand{\redrules}[2]{\ensuremath{\redrule{\redcons{#1}}{\redcon{#2}}}}
-\newcommand{\redsp}{\ensuremath{\hfill}}
+\newcommand{\redsp}{\ensuremath{\quad \quad}}
 
 % Formats
 
