--- a/model/haskell/operational-semantics/scheme.tex
+++ b/model/haskell/operational-semantics/scheme.tex
@@ -31,7 +31,7 @@ $(\varvalfs \neq \expnum{\varnum})$ \\
 
 \redruleh
 {\exphs{\cslist{\varcsh}}{\varvalfs}}
-{\expwrongs{\tyunbrand{\varcsh}}{\str{Not \; a \; list}}} \\
+{\expwrongs{\tyunbrand{\cslist{\varcsh}}}{\str{Not \; a \; list}}} \\
 
 \redsp $(\varvalfs \neq \expnild$ and $\varvalfs \neq \expcons{\first{\varvalus}}{\second{\varvalus}})$ \\
 
