--- a/model/ml/grammar.tex
+++ b/model/ml/grammar.tex
@@ -4,13 +4,13 @@
 
 \varexpm & $=$ & \varvarm $|$ \varvalum $|$ \expfapp{\varexpm}{\varexpm} $|$ \exptapp{\varexpm}{\vartym} $|$ \expfix{\varexpm} $|$ \expop{\varexpm}{\varexpm} $|$ \expif{\varexpm}{\varexpm}{\varexpm} \\
 
-&& \expcons{\varexpm}{\varexpm} $|$ \expfield{\varexpm} $|$ \exppnull{\varexpm} $|$ \expwrongs{\vartym}{\formvar{string}} $|$ \expms{\vartym}{\varexps} \\
+&& \expcons{\varexpm}{\varexpm} $|$ \expfield{\varexpm} $|$ \exppnull{\varexpm} $|$ \expwrongs{\vartym}{\formvar{string}} $|$ \expms{\varcsm}{\varexps} \\
 
-\varvalum & $=$ & \varvalfm $|$ \expmh{\vartym}{\vartyh}{\varexph} \\
+\varvalum & $=$ & \varvalfm $|$ \expmh{\varcsm}{\varcsh}{\varexph} \\
 
-\varvalfm & $=$ & \expfabss{\varvarm}{\vartym}{\varexpm} $|$ \exptabs{\tyvarm}{\varexpm} $|$ \expnum{\varnum} $|$ \expnils{\vartym} $|$ \expcons{\varvalum}{\varvalum} $|$ \expmh{\tylump}{\vartyh}{\varvaluh} \\
+\varvalfm & $=$ & \expfabss{\varvarm}{\vartym}{\varexpm} $|$ \exptabs{\tyvarm}{\varexpm} $|$ \expnum{\varnum} $|$ \expnils{\vartym} $|$ \expcons{\varvalum}{\varvalum} $|$ \expmh{\cslump}{\varcsh}{\varexph} \\
 
-&& \expms{\tylump}{\varvalfs} \\
+&& \expms{\cslump}{\varvalfs} \\
 
 \vartym & $=$ & \tylump $|$ \tynum $|$ \tyvarm $|$ \tylist{\vartym} $|$ \tylabel{\vartym}{\tyvarm} $|$ \tyfun{\vartym}{\vartym} $|$ \tyfor{\tyvarm}{\vartym} \\
 
@@ -18,13 +18,13 @@
 
 \formvar{\symfield} & $=$ & \formsym{\symhd} $|$ \formsym{\symtl} \\
 
-\varconfm & $=$ & \varconum $|$ \expmh{\vartym}{\vartyh}{\varconfh} \\
+\varconfm & $=$ & \varconum $|$ \expmh{\varcsm}{\varcsh}{\varconfh} \\
 
 \varconum & $=$ & \symholem $|$ \expfapp{\varconfm}{\varexpm} $|$ \expfapp{\varvalfm}{\varconum} $|$ \exptapp{\varconfm}{\vartym} $|$ \expfix{\varconfm} $|$ \expop{\varconfm}{\varexpm} $|$ \expop{\varvalfm}{\varconfm} \\
 
 && \expif{\varconfm}{\varexpm}{\varexpm} $|$ \expcons{\varconum}{\varexpm} $|$ \expcons{\varvalum}{\varconum} $|$ \expfield{\varconfm} $|$ \exppnull{\varconfm} \\
 
-&& \expms{\vartym}{\varconfs}
+&& \expms{\varcsm}{\varconfs}
 
 \end{tabular}
 \caption{ML grammar and evaluation contexts}
