--- a/model/ml/operational-semantics/ml.tex
+++ b/model/ml/operational-semantics/ml.tex
@@ -8,11 +8,11 @@
 {\expfapp{(\expfabss{\varvarm}{\vartym}{\varexpm})}{\varvalum}}
 {\expsubst{\varexpm}{\varvalum}{\varvarm}} \\
 
-% Type application
+% (\\u.e)<t>
 
 \redrulem
 {\exptapp{(\exptabs{\tyvarm}{\varexpm})}{\vartym}}
-{\expsubst{\varexpm}{\vartym}{\tyvarm}} \\
+{\expsubst{\varexpm}{\csbrand{\varbrand}{\vartym}}{\tyvarm}} \\
 
 % Fix
 
