--- a/model/scheme/operational-semantics/ml.tex
+++ b/model/scheme/operational-semantics/ml.tex
@@ -40,11 +40,11 @@
 
 \redsp \redcon{{\expfabsd{\varvars}{\expsm{\second{\varcsm}}{\expfapp{((\expfabss{\varvarm}{\vartym}{\varexpm})}{(\expms{\first{\varcsm}}{\varvars})})}}}} \\
 
-% sm (Ax.t) (hs (Ax.t) v)
+% sm (Au.k) (\\u.e)
 
 \redrules
 {\expsm{(\csfor{\first{\csvarm}}{\varcsm})}{(\exptabs{\second{\tyvarm}}{\varexpm})}}
-{\expsm{\tysubst{\first{\varcsm}}{\cslump}{\tyvarm}}{\expsubst{\varexpm}{\tylump}{\second{\tyvarm}}}} \\
+{\expsm{\cssubst{\first{\varcsm}}{\cslump}{\csvarm}}{\expsubst{\varexpm}{\tylump}{\second{\tyvarm}}}} \\
 
 \end{tabular}
 \caption{Scheme-ML operational semantics}
