Put all model figures on separate pages. Revised the H model to not use cs for HM/MH. Still need to do M model. Minor corrections where needed.

--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -100,6 +100,8 @@ If it is a Scheme value wrapped in an inner boundary, the outer boundary reduces
 
 \input{model/haskell/grammar.tex}
 
+\clearpage
+
 \input{model/haskell/typing-rules.tex}
 
 \clearpage
@@ -110,11 +112,15 @@ If it is a Scheme value wrapped in an inner boundary, the outer boundary reduces
 
 \input{model/haskell/operational-semantics/ml.tex}
 
+\clearpage
+
 \input{model/haskell/operational-semantics/scheme.tex}
 
 \clearpage
 
 \input{model/ml/grammar.tex}
+
+\clearpage
 
 \input{model/ml/typing-rules.tex}
 
@@ -126,11 +132,15 @@ If it is a Scheme value wrapped in an inner boundary, the outer boundary reduces
 
 \input{model/ml/operational-semantics/haskell.tex}
 
+\clearpage
+
 \input{model/ml/operational-semantics/scheme.tex}
 
 \clearpage
 
 \input{model/scheme/grammar.tex}
+
+\clearpage
 
 \input{model/scheme/typing-rules.tex}
 
@@ -141,5 +151,7 @@ If it is a Scheme value wrapped in an inner boundary, the outer boundary reduces
 \clearpage
 
 \input{model/scheme/operational-semantics/haskell.tex}
+
+\clearpage
 
 \input{model/scheme/operational-semantics/ml.tex}
