--- a/model/haskell/operational-semantics/scheme.tex
+++ b/model/haskell/operational-semantics/scheme.tex
@@ -45,7 +45,7 @@ $(\varvalfs \neq \expnum{\varnum})$ \\
 
 \redruleh
 {\exphs{(\csbrand{\varbrand}{\vartyh})}{\varvalfs}}
-{\expwrongs{\vartyh}{\str{Parametricity \; violated}}}
+{\expwrongs{\vartyh}{\str{Brand \; mismatch}}}
 $(\varvalfs \neq \expsh{(\csbrand{\varbrand}{\vartyh})}{\varexph})$ \\
 
 % hs (k->k) (\x.e)
