--- a/model/haskell/grammar.tex
+++ b/model/haskell/grammar.tex
@@ -4,9 +4,9 @@
 
 \varexph & $=$ & \varvarh $|$ \varvaluh $|$ \expfapp{\varexph}{\varexph} $|$ \exptapp{\varexph}{\vartyh} $|$ \expfix{\varexph} $|$ \expop{\varexph}{\varexph} $|$ \expif{\varexph}{\varexph}{\varexph} $|$ \expfield{\varexph} \\
 
-&& \exppnull{\varexph} $|$ \expwrongs{\vartyh}{\formvar{string}} $|$ \exphm{\varcsh}{\varcsm}{\varexpm} $|$ \exphs{\varcsh}{\varexps} \\
+&& \exppnull{\varexph} $|$ \expwrongs{\vartyh}{\formvar{string}} $|$ \exphm{\vartyh}{\vartym}{\varexpm} $|$ \exphs{\varcsh}{\varexps} \\
 
-\varvaluh & $=$ & \expfabss{\varvarh}{\vartyh}{\varexph} $|$ \exptabs{\tyvarh}{\varexph} $|$ \expnum{\varnum} $|$ \expnils{\vartyh} $|$ \expcons{\varexph}{\varexph} $|$ \exphm{\cslump}{\varcsm}{\varvalfm} \\
+\varvaluh & $=$ & \expfabss{\varvarh}{\vartyh}{\varexph} $|$ \exptabs{\tyvarh}{\varexph} $|$ \expnum{\varnum} $|$ \expnils{\vartyh} $|$ \expcons{\varexph}{\varexph} $|$ \exphm{\tylump}{\vartym}{\varvalfm} \\
 
 && \exphs{\cslump}{\varvalfs} \\
 
@@ -20,7 +20,7 @@
 
 \varconfh & $=$ & \symholeh $|$ \expfapp{\varconfh}{\varexph} $|$ \exptapp{\varconfh}{\vartyh} $|$ \expfix{\varconfh} $|$ \expop{\varconfh}{\varexph} $|$ \expop{\varvaluh}{\varconfh} \\
 
-&& \expif{\varconfh}{\varexph}{\varexph} $|$ \expfield{\varconfh} $|$ \exppnull{\varconfh} $|$ \exphm{\varcsh}{\varcsm}{\varconfm} $|$ \exphs{\varcsh}{\varconfs}
+&& \expif{\varconfh}{\varexph}{\varexph} $|$ \expfield{\varconfh} $|$ \exppnull{\varconfh} $|$ \exphm{\vartyh}{\vartym}{\varconfm} $|$ \exphs{\varcsh}{\varconfs}
 
 \end{tabular}
 \caption{Haskell grammar and evaluation contexts}
