--- a/model/haskell/typing-rules.tex
+++ b/model/haskell/typing-rules.tex
@@ -121,19 +121,19 @@
 \[
 % hm k k e
 \frac
-{\judth{\env}{\tyunbrand{\varcsh}} \quad \judtm{\env}{\tyunbrand{\varcsm}} \quad \judem{\env}{\varexpm}{\tyunbrand{\varcsm}} \quad \varcsh=\varcsm}
-{\judeh{\env}{\exphm{\varcsh}{\varcsm}{\varexpm}}{\tyunbrand{\varcsh}}}
+{\judth{\env}{\vartyh} \quad \judtm{\env}{\first{\vartym}} \quad \judem{\env}{\varexpm}{\second{\vartym}} \quad \vartyh=\vartym \quad \first{\vartym} = \second{\vartym} \quad \vartyh \neq \tylump}
+{\judeh{\env}{\exphm{\vartyh}{\first{\vartym}}{\varexpm}}{\vartyh}}
 \]
 \[
 % hm L k e
 \frac
-{\judtm{\env}{\tyunbrand{\varcsm}} \quad \judem{\env}{\varexpm}{\tyunbrand{\varcsm}} \quad \varcsm \neq \cslump}
-{\judeh{\env}{\exphm{\cslump}{\varcsm}{\varexpm}}{\tylump}}
+{\judtm{\env}{\first{\vartym}} \quad \judem{\env}{\varexpm}{\second{\vartym}} \quad \first{\vartym} = \second{\vartym} \quad \first{\vartym} \neq \tylump}
+{\judeh{\env}{\exphm{\tylump}{\first{\vartym}}{\varexpm}}{\tylump}}
 \quad
 % hm k L e
 \frac
-{\judth{\env}{\tyunbrand{\varcsh}} \quad \judem{\env}{\varexpm}{\tylump} \quad \varcsh \neq \cslump}
-{\judeh{\env}{\exphm{\varcsh}{\cslump}{\varexpm}}{\tyunbrand{\varcsh}}}
+{\judth{\env}{\vartyh} \quad \judem{\env}{\varexpm}{\tylump} \quad \vartyh \neq \tylump}
+{\judeh{\env}{\exphm{\vartyh}{\tylump}{\varexpm}}{\vartyh}}
 \]
 \caption{Haskell typing rules}
 \label{htr}
